base page layout

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home by Sahan</title>
     <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link rel="stylesheet" href="./assets/css/layout.css">
     <link rel="stylesheet" href="./assets/css/HeaderBar.css">
   </head>
   <body>
-    <header id="HeaderBar">
+    <section id="HeaderBar">
         <section id="Weather">
             <section id="CurrentTemperature">
                 <h3>32</h3>
@@ -34,9 +35,16 @@
                 <h4>24 - 03 - 25</h4>
             </section>
         </section>
-    </header>
-    <main>
-        <h1>Welcome to My Wesite</h1>
-    </main>
+    </section>
+
+    <section id="ProjectPlanner"></section>
+
+    <section id="Mail"></section>
+
+    <section id="Articles"></section>
+
+    <section id="ChatAI"></section>
+
+    <section id="SearchBar"></section>
   </body>
 </html>
